# cpp_implementations

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  main.cc
include/: future_promise.h  future_promise_simplified.h  is_valid.h
src/: future_promise.cc
